--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "maci-crypto-rust"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "example"
+crate-type = ["staticlib"]
+
+[build-dependencies]
+uniffi = { version = "0.26.1", features = ["build"] }
 
 [dependencies]
+uniffi = { version = "0.26.1", features = ["cli"] }
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
