--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
 babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"], rev = "dbf79c5" }
 sha3 = "0.10.8"
-
+ark-ff = "0.4.2"
+ark-bn254 = "0.4.0"
