--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [lib]
 name = "example"
-crate-type = ["staticlib"]
+crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
 uniffi = { version = "0.26.1", features = ["build"] }
@@ -15,6 +15,7 @@ uniffi = { version = "0.26.1", features = ["cli"] }
 poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
 babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"], rev = "dbf79c5" }
 sha3 = "0.10.8"
+ark-ff = { version = "=0.4.1" }
 
 [[bin]]
 name = "uniffi-bindgen"
