--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features
 sha3 = "0.10.8"
 ark-ff = "0.4.2"
 ark-bn254 = "0.4.0"
+dusk-poseidon = { version = "0.36.0", features = ["cipher"] }
+dusk-jubjub = "0.14.0"
