--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,15 @@ crate-type = ["lib", "cdylib", "staticlib"]
 uniffi = { version = "0.26.1", features = ["build"] }
 
 [dependencies]
+dusk-poseidon = { version = "0.36.0", features = ["cipher"] }
+dusk-jubjub = "0.14.0"
 uniffi = { version = "0.26.1", features = ["cli"] }
 poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
 babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"], rev = "dbf79c5" }
 sha3 = "0.10.8"
 ark-ff = "0.4.2"
 ark-bn254 = "0.4.0"
+
 
 [[bin]]
 name = "uniffi-bindgen"
