--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /target
 
 /include
+/Example.xcframework/ios-arm64/Example.framework/Example
+/Example.xcframework/ios-arm64_x86_64-simulator/Example.framework/Example
